--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <!-- <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83560/671406/css/fonts.css" /> -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>GRCO - Green Infrastructure</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<style>
-
-</style>
 <body>
   <div id="legend-container">
     <div class="legend" style="background:#832A2A;"></div><div class="label">National Government</div><div class="clearfix"></div>
@@ -26,7 +22,7 @@
     <div class="legend" style="background:#31a3af;"></div><div class="label">Practitioners</div><div class="clearfix"></div>
   </div>
 </body>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
+<script type="text/javascript" src="js/lodash.js"></script>
 <script type="text/javascript" src="js/d3.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
