updated colour palette

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div id="legend-container">
-    <div class="legend" style="background:#832A2A;"></div><div class="label">National Government</div><div class="clearfix"></div>
-    <div class="legend" style="background:#AA0A0B;"></div><div class="label">Gauteng Province</div><div class="clearfix"></div>
+    <div class="legend" style="background:#E5BA41;"></div><div class="label">National Government</div><div class="clearfix"></div>
+    <div class="legend" style="background:#A06075;"></div><div class="label">Gauteng Province</div><div class="clearfix"></div>
     <div class="legend" style="background:#CC1A1B;"></div><div class="label">City of Johannesburg Metropolitan Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#ea3232;"></div><div class="label">City of Tshwane Metropolitan Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#ed4f4f;"></div><div class="label">Ekurhuleni Metropolitan Municipality</div><div class="clearfix"></div>
