--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="legend" style="background:#CC1A1B;"></div><div class="label">City of Johannesburg Metropolitan Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#ea3232;"></div><div class="label">City of Tshwane Metropolitan Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#ed4f4f;"></div><div class="label">Ekurhuleni Metropolitan Municipality</div><div class="clearfix"></div>
-    <div class="legend" style="background:#f9b4aa;"></div><div class="label">Emfuleni Local Municipality</div><div class="clearfix"></div>
-    <div class="legend" style="background:#F07067;"></div><div class="label">Lesedi Local Municipality (MMC)</div><div class="clearfix"></div>
+    <div class="legend" style="background:#F07067;"></div><div class="label">Emfuleni Local Municipality</div><div class="clearfix"></div>
+    <div class="legend" style="background:#f9b4aa;"></div><div class="label">Lesedi Local Municipality (MMC)</div><div class="clearfix"></div>
     <div class="legend" style="background:#f99d8c;"></div><div class="label">Merafong City Local Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#f9896e;"></div><div class="label">Midvaal Local Municipality</div><div class="clearfix"></div>
     <div class="legend" style="background:#f9704b;"></div><div class="label">Mogale City Local Municipality</div><div class="clearfix"></div>
